--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "@9.56.25",
-    "@react-three/fiber": "@8.11.2",
-    "@types/three": "@0.149.0",
-    "r3f-perf": "@7.1.2",
-    "react": "@18.2.0",
-    "react-dom": "@18.2.0",
-    "three": "@0.149.0",
-    "zustand": "@4.3.3"
+    "@react-three/drei": "9.56.25",
+    "@react-three/fiber": "8.11.2",
+    "@types/three": "0.149.0",
+    "r3f-perf": "7.1.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "three": "0.149.0",
+    "zustand": "4.3.3"
   },
   "devDependencies": {
-    "@types/react": "@18.0.27",
-    "@types/react-dom": "@18.0.10",
-    "@vitejs/plugin-react": "@3.1.0",
-    "sass": "@1.58.3",
-    "vite": "@4.1.0"
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "@vitejs/plugin-react": "3.1.0",
+    "sass": "1.58.3",
+    "vite": "4.1.0"
   }
 }
